<resources>
    <string name="app_name">At Your Service</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="wellcome">Welcome</string>
    <string name="at_your_service">At Your Service</string>
    <string name="to">To</string>
    <string name="always_getting_better">Always Getting Better</string>
    <string name="now_in_pakistan">Now In Pakistan</string>
    <string name="pak_logo">Pak logo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="experience">Experience</string>
    <string name="password">Password</string>
    <string name="_92">+92</string>
    <string name="sign_up">Sign In</string>
    <string name="email">Email</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="signin">Sign In</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="this_is_forget_password_screen">This Is Forget Password Screen</string>
    <string name="create_account">Create Account</string>
    <string name="wellcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="new_user_sign_up">New User? Sign UP</string>
    <string name="signup_to_start_your_journey">SignUp to start your Journey</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--to toggle the open close button
            of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home_icon">Home Icon</string>
    <string name="title_activity_plumber">Plumber</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bottom_navigation">Bottom_Navigation_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_res">res</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_google_map">GoogleMap</string>
    <string name="logo">logo</string>
    <string name="welcome">welcome</string>
    <string name="contact_no">Contact No</string>
    <string name="user">User</string>
    <string name="worker">Worker</string>
    <string name="ssignup_to_start_your_journey">Signup To Start Your Journey</string>
    <string name="backbutton">BackButton</string>
    <string name="imageview">ImageView</string>
    <string name="ac_service">Ac Service</string>
    <string name="select_the_work_you_went_to_do">Select The Work You Went to do</string>
    <string name="leak_replacement">Leak Replacement</string>


</resources>