<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp.SignupActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    android:padding="20dp"
    >
    <ImageView
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:src="@drawable/flogo"
        android:layout_gravity="center"
        android:contentDescription="@string/logo">
    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="@color/white"
        android:text="@string/ssignup_to_start_your_journey"
        android:textSize="15sp">
    </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/data"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regUsername"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/user_name"
                >

                <EditText
                    android:id="@+id/RegUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    tools:ignore="Autofill">
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regEmail"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/email"
                >

                <EditText
                    android:id="@+id/RegEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="5dp"
                    android:textColor="@color/white"
                    tools:ignore="Autofill">
                </EditText>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regPhoneNo"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/contact_no"
                app:prefixText="+92"
                >

                <EditText
                    android:id="@+id/RegPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    android:maxLength="10"
                    tools:ignore="Autofill">
                </EditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regPassword"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                >

                <EditText
                    android:id="@+id/RegPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"
                    >
                </EditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/RGroup"
        android:orientation="horizontal"
        >
        <RadioButton
        android:id="@+id/RadioUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/user"
        android:layout_marginTop="0dp"
        android:checked="false"
        android:textSize="15sp" />
    <RadioButton
        android:id="@+id/RadioWorker"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/worker"
        android:layout_marginTop="0dp"
        android:checked="false"
        android:textSize="15sp" />
        <RadioButton
            android:id="@+id/RadioAdmin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Admin"
            android:layout_marginTop="0dp"
            android:checked="false"
            android:textSize="15sp" />

</RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="Sign Up"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/AlreadyHaveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textColor="@color/white"
        android:minHeight="48dp"
        android:text="@string/already_have_an_account_login">

    </Button>
</LinearLayout>
