<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    tools:context=".AcService.Ac_Service">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:background="@color/white"
        android:contentDescription="@string/backbutton"
        android:scaleType="fitXY"
        android:src="@drawable/arrow_back"
        app:tint="@color/black" />
    <com.google.android.material.imageview.ShapeableImageView

        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/image"
        android:layout_marginTop="60dp"

        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:elevation="5dp"

        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:scaleType="fitXY"
        android:src="@drawable/acservicenew"
        android:transitionName="example_transition3"
        app:shapeAppearance="?attr/actionButtonStyle"
        app:shapeAppearanceOverlay="@style/imageViewRounded"
        app:strokeColor="@android:color/white" />



    <TextView
        android:id="@+id/plum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:text="@string/ac_service"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/selec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/plum"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/select_the_work_you_went_to_do"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/leakReplacement"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selec"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:paddingStart="15dp"
        android:text="Half service"
        android:textColor="@color/black"

        android:textSize="17sp"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/Drain"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/leakReplacement"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:paddingStart="15dp"
        android:text="Full service"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/Water"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Drain"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:paddingLeft="15dp"
        android:text="Interior cleaning"

        android:textColor="@color/black"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/Geyser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Water"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:paddingLeft="15dp"
        android:text="Engine degreasing"

        android:textColor="@color/black"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/Pipe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Geyser"
        android:layout_centerInParent="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="45dp"
        android:paddingLeft="15dp"
        android:text="AC Wiring"

        android:textColor="@color/black"
        android:textSize="17sp" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/SearchAcservice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Pipe"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/buttonshape"
        android:text="Search"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>